add changer in user profil

--- a/auth/changerPassword/changerPassword.phtml
+++ b/auth/changerPassword/changerPassword.phtml
@@ -20,7 +20,7 @@
                   <input type="text" name="code" class="form-control mb-4" placeholder="****">
                   <button name="Suivant" class="btn btn-success mb-2">Suivant</button>
                   <div class="text-center">
-                       <a href="/auth/login/"><button  class="btn btn-secondary">cancel</button> </a>
+                       <a href="./login/"><button  class="btn btn-secondary">cancel</button> </a>
                   </div>
          </div>
          <div class="col-md-6">
