--- a/auth/login/login.phtml
+++ b/auth/login/login.phtml
@@ -1,21 +1,27 @@
 <style>
 
-img{
-  height:100%;
-  width:100%;
-}
+
 .fin{
   font-size:22px;
 }
 
 </style>
 
-
 <div class="login">
-   <div class="d-flex justify-content-center py-3">
-        <button class="text-center btn btn-outline-info d-block"><a href="../../"><i class="fa-solid fa-house-user display-4"></i></a> </button>
-  </div>
-<div class="d-flex p-3 m-4 justify-content-center">   
+        <nav  class="mb-5 bg-white mb-5 navbar navbar-expand-lg text-uppercase fixed-top ">
+            <div class="container">
+                <a class="navbar-brand" href="##"><img src="../../assets/image/logo_final.png" width="50px" height="50px" alt=""> </a>
+                <button class="navbar-toggler text-uppercase font-weight-bold bg-primary  text-primary rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <i style="color:#4fc3dc" class="fas fa-bars"></i>
+                </button>
+                <div  class="collapse navbar-collapse justify-content-end mx-5" id="navbarResponsive">
+                    <ul class="navbar-nav text-center  p-2">
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link link_navbar text-center px-0 px-lg-3 rounded" href="../../index.php">Home</a></li>
+                      </ul>
+                </div>
+            </div>
+        </nav>
+<div class="d-flex mt-5 p-3 m-4 justify-content-center">   
     <div class="col-xl-10 col-md-12 col-lg-12">
           <div class="row shadow-lg rounded">
                 <div class="col-lg-6 d-none d-lg-block ">
