--- a/certificat/css/css_test.phtml
+++ b/certificat/css/css_test.phtml
@@ -63,62 +63,66 @@
             <form action="index.php" method="POST" class="text-dark">    
                 <div class="my-5">
 
-                    <p class="lead text-danger font-weight-normal">1. Stand For CSS?</p>
+                    <p class="lead text-danger font-weight-normal">1.Que signifie CSS ?</p>
                     <div class="form-check my-2 text-dark-50">
-                        <input type="radio" name="q1" value="A" >
-                        <label class="form-check-label">cascading style style</label>
+                        <input type="radio" id="q1" name="q1" value="A" >
+                        <label class="form-check-label" for="q1">  Cascading Style Sheets</label>
                     </div>
                     <div class="form-check my-2 text-dark-50">
-                        <input type="radio" name="q1" value="B">
-                        <label class="form-check-label">cascading style sheet</label>
+                        <input type="radio" id="q2" name="q1" value="B">
+                        <label class="form-check-label" for="q2">Create Simple Samples</label>
                     </div>
                     <div class="form-check my-2 text-dark-50">
-                        <input type="radio" name="q1" value="C">
-                        <label class="form-check-label">cascading style street</label>
+                        <input type="radio" id="q3" name="q1" value="C">
+                        <label class="form-check-label" for="q3">Choucroute et Saucisses de Strasbourg</label>
                     </div>
                 </div>
 
                 <div class="my-5">
-                    <p class="lead text-danger font-weight-normal">2.role grid ?</p>
+                    <p class="lead text-danger font-weight-normal">2.À quoi sert le langage CSS ? ?</p>
                     <div class="form-check my-2 text-dark-50">
-                        <input type="radio" name="q2" value="A">
-                        <label class="form-check-label">size</label>
+                        <input type="radio"  name="q2" value="A">
+                        <label class="form-check-label">À réaliser des pages dynamiques</label>
                     </div>
                     <div class="form-check my-2 text-dark-50">
-                        <input type="radio" name="q2" value="B">
-                        <label class="form-check-label"p>color</label>
+                        <input type="radio" name="q2"  value="B">
+                        <label class="form-check-label"> À ajouter du style aux documents web</label>
                     </div>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q2" value="C">
-                        <label class="form-check-label"p>mise en page</label>
+                        <label class="form-check-label">À insérer du contenu dans une page internet</label>
                     </div>
                 </div>
 
                 <div class="my-5">
-                    <p class="lead text-danger font-weight-normal">3.css role ?</p>
+                    <p class="lead text-danger font-weight-normal">3. Comment ajouter un commentaire en CSS ?</p>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q3" value="A">
-                        <label class="form-check-label">structure</label>
+                        <label class="form-check-label"><-- Commentaire -></label>
                     </div>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q3" value="B">
-                        <label class="form-check-label"p>style</label>
+                        <label class="form-check-label"> /* Commentaire */</label>
                     </div>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q3" value="C">
-                        <label class="form-check-label"p>dynamique</label>
+                        <label class="form-check-label">// Commentaire</label>
                     </div>
                 </div>
 
                 <div class="my-5">
-                    <p class="lead  text-danger font-weight-normal">4.vissibility:hidden  ?</p>
+                    <p class="lead  text-danger font-weight-normal">4.Quelle déclaration CSS permet d'ajouter une majuscule à chaque mot d'un élément HTML ?  ?</p>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q4" value="A">
-                        <label class="form-check-label">effacer from html</label>
+                        <label class="form-check-label">text-transform: capitalize;</label>
                     </div>
                     <div class="form-check  my-2 text-dark-50">
                         <input type="radio" name="q4" value="B">
-                        <label class="form-check-label"p>just hidde</label>
+                        <label class="form-check-label">font-transform: capitalize;</label>
+                    </div>
+                    <div class="form-check  my-2 text-dark-50">
+                        <input type="radio" name="q4" value="C">
+                        <label class="form-check-label">text-decoration: uppercase;</label>
                     </div>
 
                 </div>
@@ -133,15 +137,13 @@
     <?php if($show_next_time==1): ?>
         <div class="popup-below">
             <div class="popup_magasin">
-               <h1 >NEXT time : <?=$score?></h1>
-              <div style="display:block">
+               <h1>next time</h1>
+              <div>
                     <div class="contenu_magasin"> 
-                        Lorem ipsum dolor sit amet.
-                    </div>
+                     Votre Score    <?=$score?>  : <?=$_SESSION['nameUser']?>
+                    </div> 
                 <br>
               </div>
-                 <span class="prix_total" style="font-weight: 600;">ddd</span>
-
              </div>
         </div>
         <script>
@@ -150,31 +152,25 @@
         </script>
    <?php endif; ?>
 
-    <?php ?>
 <?php if($show_congrats==1) :?>
     <canvas id="my-canvas"></canvas>
-    <div class="popup-below">
+        <div class="popup-below">
             <div class="popup_magasin">
-               <h1 >congrats  <?=$score?>:</h1>
-              <div style="display:block">
-                    <div class="contenu_magasin"> 
-                        Lorem ipsum dolor sit amet.
+               <h1>Congrats  :</h1>
+                    <div  style="font-size: 25px;" class="contenu_magasin mb-5"> 
+                        <?=$_SESSION['nameUser']?>
                     </div>
-
-                <br>
-              </div>
-                 <span class="prix_total" style="font-weight: 600;">ddd</span>
-
-             </div>
+                 <span class="prix_total" style="font-weight: 600;">Votre Score <?=$score?></span>
+                 <br>
+                 <small>Certificat a envoyer sur cette email <?=$_SESSION['emailUser']?></small>
+                </div>
    </div>
    <script>
-          
-
             var confettiSettings = { target: 'my-canvas' };
             var confetti = new ConfettiGenerator(confettiSettings);
             confetti.render();
-  
-        setTimeout(()=>window.location.href="../index.php",7000);
+
+        setTimeout(()=>window.location.href="../index.php",4000);
     </script>
     
    <?php endif; ?>
