--- a/certificat/html/html_test.phtml
+++ b/certificat/html/html_test.phtml
@@ -63,62 +63,62 @@
             <form action="index.php" method="POST" class="text-dark">    
                 <div class="my-5">
 
-                    <p class="lead text-danger font-weight-normal">1.html?</p>
+                    <p class="lead text-danger font-weight-normal">1.Que veux dire l'abréviation HTML ?</p>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q1" value="A" >
-                        <label class="form-check-label"></label>
+                        <label class="form-check-label">Home Tool Mockup Language</label>
                     </div>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q1" value="B">
-                        <label class="form-check-label"></label>
+                        <label class="form-check-label">Home Tool Markup Language</label>
                     </div>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q1" value="C">
-                        <label class="form-check-label"></label>
+                        <label class="form-check-label">Hyper Text Markup Language</label>
                     </div>
                 </div>
 
                 <div class="my-5">
-                    <p class="lead text-danger font-weight-normal">2.html ?</p>
+                    <p class="lead text-danger font-weight-normal">2.Quel est le doctype d'un document HTML5  ?</p>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q2" value="A">
-                        <label class="form-check-label"></label>
+                        <label class="form-check-label"> <?=htmlentities('<!DOCTYPE html5>', ENT_QUOTES)?></label>
                     </div>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q2" value="B">
-                        <label class="form-check-label"p></label>
+                        <label class="form-check-label"p> <?=htmlentities('<!DOCTYPE html>', ENT_QUOTES)?></label>
                     </div>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q2" value="C">
-                        <label class="form-check-label"p>  </label>
+                        <label class="form-check-label"p> <?=htmlentities('<DOCTYPE html />', ENT_QUOTES)?> </label>
                     </div>
                 </div>
 
                 <div class="my-5">
-                    <p class="lead text-danger font-weight-normal">3. ?</p>
+                    <p class="lead text-danger font-weight-normal">3. Quelle balise utilise-t-on pour créer une liste numérotée ? ?</p>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q3" value="A">
-                        <label class="form-check-label"></label>
+                        <label class="form-check-label"><?= htmlentities('<list>', ENT_QUOTES)?></label>
                     </div>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q3" value="B">
-                        <label class="form-check-label"p></label>
+                        <label class="form-check-label"p><?= htmlentities('<dl>', ENT_QUOTES)?></label>
                     </div>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q3" value="C">
-                        <label class="form-check-label"p></label>
+                        <label class="form-check-label"p><?= htmlentities('<ol>', ENT_QUOTES)?></label>
                     </div>
                 </div>
 
                 <div class="my-5">
-                    <p class="lead  text-danger font-weight-normal">4.:  ?</p>
+                    <p class="lead  text-danger font-weight-normal">4.Lequel de ces liens s'ouvre automatiquement dans un nouvel onglet ?  ?</p>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q4" value="A">
-                        <label class="form-check-label">  </label>
+                        <label class="form-check-label">  <?= htmlentities('<a href="https://www.google.fr/#new">', ENT_QUOTES)?>   </label>
                     </div>
                     <div class="form-check  my-2 text-dark-50">
                         <input type="radio" name="q4" value="B">
-                        <label class="form-check-label"p> </label>
+                        <label class="form-check-label"><?= htmlentities('<a href="https://www.google.fr/" target="_blank">', ENT_QUOTES)?> </label>
                     </div>
 
                 </div>
@@ -133,15 +133,13 @@
     <?php if($show_next_time==1): ?>
         <div class="popup-below">
             <div class="popup_magasin">
-               <h1 >NEXT time : <?=$score?></h1>
-              <div style="display:block">
+               <h1>next time</h1>
+              <div>
                     <div class="contenu_magasin"> 
-                        Lorem ipsum dolor sit amet.
-                    </div>
+                     Votre Score    <?=$score?>  : <?=$_SESSION['nameUser']?>
+                    </div> 
                 <br>
               </div>
-                 <span class="prix_total" style="font-weight: 600;">ddd</span>
-
              </div>
         </div>
         <script>
@@ -150,33 +148,26 @@
         </script>
    <?php endif; ?>
 
-    <?php ?>
+   
 <?php if($show_congrats==1) :?>
     <canvas id="my-canvas"></canvas>
-    <div class="popup-below">
+        <div class="popup-below">
             <div class="popup_magasin">
-               <h1 >congrats  <?=$score?>:</h1>
-              <div style="display:block">
-                    <div class="contenu_magasin"> 
-                        Lorem ipsum dolor sit amet.
+               <h1>Congrats  :</h1>
+                    <div  style="font-size: 25px;" class="contenu_magasin mb-5"> 
+                        <?=$_SESSION['nameUser']?>
                     </div>
-
-                <br>
-              </div>
-                 <span class="prix_total" style="font-weight: 600;">ddd</span>
-
-             </div>
+                 <span class="prix_total" style="font-weight: 600;">Votre Score <?=$score?></span>
+                 <br>
+                 <small>Certificat a envoyer sur cette email <?=$_SESSION['emailUser']?></small>
+                </div>
    </div>
    <script>
-          
-
             var confettiSettings = { target: 'my-canvas' };
             var confetti = new ConfettiGenerator(confettiSettings);
             confetti.render();
-  
-        setTimeout(()=>window.location.href="../index.php",7000);
+
+        setTimeout(()=>window.location.href="../index.php",4000);
     </script>
     
    <?php endif; ?>
-
-   
