--- a/certificat/php/php_test.phtml
+++ b/certificat/php/php_test.phtml
@@ -63,62 +63,62 @@
             <form action="index.php" method="POST" class="text-dark">    
                 <div class="my-5">
 
-                    <p class="lead text-danger font-weight-normal">1.PHP ?</p>
+                    <p class="lead text-danger font-weight-normal">1.Quel est le type de la variable $a = 19.9;?</p>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q1" value="A" >
-                        <label class="form-check-label"></label>
+                        <label class="form-check-label">Double</label>
                     </div>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q1" value="B">
-                        <label class="form-check-label"></label>
+                        <label class="form-check-label">String</label>
                     </div>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q1" value="C">
-                        <label class="form-check-label"></label>
+                        <label class="form-check-label">Integer</label>
                     </div>
                 </div>
 
                 <div class="my-5">
-                    <p class="lead text-danger font-weight-normal">2.PHP ?</p>
+                    <p class="lead text-danger font-weight-normal">2.Quel symbole permet d'identifier les variables en PHP  ?</p>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q2" value="A">
-                        <label class="form-check-label"></label>
+                        <label class="form-check-label">&</label>
                     </div>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q2" value="B">
-                        <label class="form-check-label"p></label>
+                        <label class="form-check-label"p>$</label>
                     </div>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q2" value="C">
-                        <label class="form-check-label"p>  </label>
+                        <label class="form-check-label"p>%</label>
                     </div>
                 </div>
 
                 <div class="my-5">
-                    <p class="lead text-danger font-weight-normal">3. ?</p>
+                    <p class="lead text-danger font-weight-normal">3.  Quel est l'opérateur de concaténation en PHP ?</p>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q3" value="A">
-                        <label class="form-check-label"></label>
+                        <label class="form-check-label">+</label>
                     </div>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q3" value="B">
-                        <label class="form-check-label"p></label>
+                        <label class="form-check-label"p>.</label>
                     </div>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q3" value="C">
-                        <label class="form-check-label"p></label>
+                        <label class="form-check-label"p>$</label>
                     </div>
                 </div>
 
                 <div class="my-5">
-                    <p class="lead  text-danger font-weight-normal">4.:  ?</p>
+                    <p class="lead  text-danger font-weight-normal">4.Pour quel type de variable la boucle foreach() est très utile ?</p>
                     <div class="form-check my-2 text-dark-50">
                         <input type="radio" name="q4" value="A">
-                        <label class="form-check-label">  </label>
+                        <label class="form-check-label"> String  </label>
                     </div>
                     <div class="form-check  my-2 text-dark-50">
                         <input type="radio" name="q4" value="B">
-                        <label class="form-check-label"p> </label>
+                        <label class="form-check-label"p>Array</label>
                     </div>
 
                 </div>
@@ -133,15 +133,13 @@
     <?php if($show_next_time==1): ?>
         <div class="popup-below">
             <div class="popup_magasin">
-               <h1 >NEXT time : <?=$score?></h1>
-              <div style="display:block">
+               <h1>next time</h1>
+              <div>
                     <div class="contenu_magasin"> 
-                        Lorem ipsum dolor sit amet.
-                    </div>
+                     Votre Score    <?=$score?>  : <?=$_SESSION['nameUser']?>
+                    </div> 
                 <br>
               </div>
-                 <span class="prix_total" style="font-weight: 600;">ddd</span>
-
              </div>
         </div>
         <script>
@@ -150,33 +148,26 @@
         </script>
    <?php endif; ?>
 
-    <?php ?>
+  
 <?php if($show_congrats==1) :?>
     <canvas id="my-canvas"></canvas>
-    <div class="popup-below">
+        <div class="popup-below">
             <div class="popup_magasin">
-               <h1 >congrats  <?=$score?>:</h1>
-              <div style="display:block">
-                    <div class="contenu_magasin"> 
-                        Lorem ipsum dolor sit amet.
+               <h1>Congrats  :</h1>
+                    <div  style="font-size: 25px;" class="contenu_magasin mb-5"> 
+                        <?=$_SESSION['nameUser']?>
                     </div>
-
-                <br>
-              </div>
-                 <span class="prix_total" style="font-weight: 600;">ddd</span>
-
-             </div>
+                 <span class="prix_total" style="font-weight: 600;">Votre Score <?=$score?></span>
+                 <br>
+                 <small>Certificat a envoyer sur cette email <?=$_SESSION['emailUser']?></small>
+                </div>
    </div>
    <script>
-          
-
             var confettiSettings = { target: 'my-canvas' };
             var confetti = new ConfettiGenerator(confettiSettings);
             confetti.render();
-  
-        setTimeout(()=>window.location.href="../index.php",7000);
+
+        setTimeout(()=>window.location.href="../index.php",4000);
     </script>
     
    <?php endif; ?>
-
-   
