--- a/auth/login/login.phtml
+++ b/auth/login/login.phtml
@@ -21,7 +21,8 @@
                 </div>
             </div>
         </nav>
-<div class="d-flex mt-5 p-3 m-4 justify-content-center">   
+        
+<div class="d-flex mt-5 py-5 p-3 m-4 justify-content-center">   
     <div class="col-xl-10 col-md-12 col-lg-12">
           <div class="row shadow-lg rounded">
                 <div class="col-lg-6 d-none d-lg-block ">
