--- a/listamis/listamis.phtml
+++ b/listamis/listamis.phtml
@@ -1,5 +1,5 @@
 <div class="container py-2 mt-2">
-  <h1 class="text-center">List Amis</h1>
+  <h1 class="text-center" id="text">List Amis</h1>
    <?php if($all_user_filter=='vide'): ?>
          <div class="alert alert-danger">
                No User FOUND
