--- a/layout.phtml
+++ b/layout.phtml
@@ -5,26 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <script src="https://kit.fontawesome.com/c5bebe1cfa.js" crossorigin="anonymous"></script>
     <?php if($show==true): ?>
-       <link rel="stylesheet" href="../../assets/css/style.css">
-       <link rel="icon" href="../../assets/image/logo_final.png" type="image/x-icon">
-
+        <link rel="stylesheet" href="../../assets/css/style.css">
+        <script src="../../assets/js/script.js"></script>
+       <link rel="icon" href="../../assets/image/logo_final.png" type="image/x-icon"> 
     <?php endif; ?>
-    <?php if(isset($_SESSION['id' ]) || isset($_SESSION['idUser'])): ?>
-     
-      <link rel="stylesheet" href="../assets/css/style.css">
-      <link rel="icon" href="../assets/image/logo_final.png" type="image/x-icon">  
-
-      <script src="../assets/js/script.js"></script>
-
-    
+    <?php if(isset($_SESSION['id' ]) || isset($_SESSION['idUser'])): ?> 
+         <link rel="stylesheet" href="../assets/css/style.css">
+        <script src="../assets/js/script.js"></script>
+        <link rel="icon" href="../assets/image/logo_final.png" type="image/x-icon">   
       <?php else: ?>
-      <link rel="stylesheet" href="./assets/css/style.css">
-      <link rel="icon" href="./assets/image/logo_final.png" type="image/x-icon">  
-
-      <script src="./assets/js/script.js"></script>
-
-      <script src="https://kit.fontawesome.com/c5bebe1cfa.js" crossorigin="anonymous"></script>
+         <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="icon" href="./assets/image/logo_final.png" type="image/x-icon">  
+        <script src="./assets/js/script.js"></script> 
       <?php endif; ?>
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -502,13 +496,15 @@
            <article>
                <?php
                 // include "./classes/classes.php";
-                   $user=new user_manager();
-                   $all_notif=$user->get_notif($_SESSION['idUser']); 
-                   $length_notif=$user->lenght_notif($_SESSION['idUser']);
+                    $user=new user_manager();
+                    $all_notif=$user->get_notif($_SESSION['idUser']); 
+                    $length_notif=$user->lenght_notif($_SESSION['idUser']);
                  ?>
-                <input type="hidden" id="checkUser" value="<?=isset($_SESSION['idUser']) ? 1 : 0?>">
+                 <input type="hidden" id="checkUser" value="<?=isset($_SESSION['idUser']) ? 1 : 0?>">
+                 <input type="hidden" id="mode" value="<?=$mode_visibiltes?>">
                 <div class="navbar_user position-fixed p-2 mb-5 fixed-top shadow-lg container-fluid d-flex justify-content-between">
                     <div class="mt-3 mx-1">
+                       
                        <img src="../assets/image/logo_final.png" alt="" width="55px" height="55px">
                     </div>
                     <div class="d-flex gap-4 mx-2">
@@ -539,30 +535,32 @@
                     <a class="profile">
                 <img src="..<?=$_SESSION['avatarUser']?>" width="70px" height="70px" alt="">
             
-            <div class="handle">
+            <div id="text" class="handle">
                 <h4><?=$_SESSION['nameUser'] ." ".$_SESSION['lastnameUser']?></h4>
             </div>
           </a>
 
           <div class="sidebar">
             <a href="../ProfilUser/" class="menu-item">
-                 <div class="d-flex"><span><i class="fa-solid fa-house-user p-2  "></i></span><h3>Accueil</h3></div>
+                 <div id="text" class="d-flex"><span><i class="fa-solid fa-house-user p-2  "></i></span><h3>Accueil</h3></div>
              </a>
              <a href="../listamis/" class="menu-item ">
-                 <div  class="d-flex " ><span><i class="fa-solid fa-user p-2 " ></i></span><h3>Amis</h3></div>
+                 <div id="text"  class="d-flex " ><span><i class="fa-solid fa-user p-2 " ></i></span><h3>Amis</h3></div>
              </a>
              <a  href="../pub_save/"class="menu-item ">
-                 <div class="d-flex " ><span><i class="fa-sharp fa-solid fa-bookmark p-2 "></i></span><h3>Enregistrement</h3></div>
+                 <div id="text" class="d-flex " ><span><i class="fa-sharp fa-solid fa-bookmark p-2 "></i></span><h3>Enregistrement</h3></div>
              </a>
              <a class="menu-item " href="../certificat/">
-                 <div class="d-flex " ><span><i class="fa-solid fa-certificate p-2 "></i></span><h3>Certificat</h3></div>
+                 <div id="text" class="d-flex " ><span><i class="fa-solid fa-certificate p-2 "></i></span><h3>Certificat</h3></div>
              </a>
              <a   class="menu-item"  href="../get_all_user/index.php?changer">
-                <div class="d-flex" ><span><i class="fa-solid fa-user-plus p-2"></i></span><h3>ADD Friend</h3></div>
+                <div id="text" class="d-flex" ><span><i class="fa-solid fa-user-plus p-2"></i></span><h3>ADD Friend</h3></div>
              </a>
           </div>
           </div>
                     <div class="middle">
+                    <input type="hidden" id="checkUser" value="<?=isset($_SESSION['idUser']) ? 1 : 0?>">
+                 <input type="hidden" id="mode" value="<?=$mode_visibiltes?>">
                            <?php include $template.".phtml"; ?>
                     </div>
                     <div class="right">
@@ -610,7 +608,7 @@
                  
                         <img src="..<?=$_SESSION['avatarUser']?>" width="70px" height="50px" class="rounded img-thumbnail shadow-sm" alt="">
                          <div class="body py-3 px-2">
-                            <p class="m-0"><?=$_SESSION['nameUser'];?><?=$_SESSION['lastnameUser'];?></p>
+                             <p class="m-0"><?=$_SESSION['nameUser'];?><?=$_SESSION['lastnameUser'];?></p>
                              <p class="font-weight-normal text-muted"><?=$_SESSION['emailUser'];?></p>
                         </div>
                     </div>
@@ -633,6 +631,7 @@
                 <span style="font-size:18px"><i class="fa-solid fa-moon px-2 mb-3"></i>Affichage</span> 
              </button>
              <div class="collapse" id="dashboard-collapse">
+             <input type="hidden" id="mode " value=<?=$mode_visibiltes?>>
                <ul class="btn-toggle-nav text-center  list-unstyled fw-normal pb-1 small">
                     <form action="../Changervisibilite/" method="POST">
                            <input type="hidden" name="id" value="<?=$_SESSION['idUser']?>">
@@ -672,33 +671,57 @@
     
 </body>
 <script>
-let mode=document.querySelector('#mode')?.value;
-let checkUser=document.querySelector('#checkUser')?.value;
-let navbar=document.querySelector('.navbar_user');
-if(mode==1 && checkUser==1 ){
-var all_text = document.querySelectorAll("#text");
-for (var i=0; i<all_text.length; i++) {
-  all_text[i].style.color='white';
-}
-  navbar.setAttribute('id', 'navbar');
-  document.body.style.backgroundColor = "#000";
-}else{
-  document.body.style.backgroundColor = "whitesmoke";
-}
 
-let link_sidebar=document.querySelectorAll('.menu-item');
-link_sidebar.forEach(link=>{
-    link.addEventListener('click',function(){
-      link_sidebar.forEach(link_choice=>{
-            link_choice.classList.remove('active');
-            this.classList.add('active');
-        })
-    })
-})
+   let mode=document.querySelector('#mode').value;
+   let checkUser=document.querySelector('#checkUser').value;
+   let feeds=document.querySelectorAll('.feed');
+   let summary=document.querySelector('summary');
+   let profile=document.querySelector('.profile');
+   let all_comments=document.querySelector('.comment_body');  
+   let edit_user=document.querySelector('.form_edit');
+   let card_comment=document.querySelectorAll('.card_comment');
+   let navbar=document.querySelector('.navbar_user');
+   let sidebar=document.querySelector('.sidebar');
+   let all_story=document?.querySelector('.all_story');
+   let post=document?.querySelector('.post');
+   let main=document.querySelector('main');
 
+   if(mode==1 && checkUser==1 ){
+
+   var all_text = document.querySelectorAll("#text");
+
+    for (var i=0; i<all_text.length; i++) {
+     all_text[i].style.color='white';
+    }
+
+     profile.setAttribute('id','profile');
+     navbar.setAttribute('id', 'navbar_sombre');
+     sidebar.setAttribute('id','sidebar_sombre');
+     document.body.style.backgroundColor = "#000";
+     all_story.setAttribute('id', 'all_story');
+
+    for (var i=0; i<card_comment.length; i++) {
+      card_comment[i].setAttribute('id','card_comment');
+    }
+
+    for (var i=0; i<feeds.length; i++) {
+      feeds[i].setAttribute('id','feeds');
+    }
+
+     summary.setAttribute('id','summary');
+     all_comments.setAttribute('id','comment_body');
+     post.setAttribute('id', 'post');  
+     main.setAttribute('id','main');
+     edit_user.setAttribute('id','edit_user');
+
+   }else{
+
+     document.body.style.backgroundColor = "whitesmoke";
+
+   }
+   
 </script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-<script src="jquery-3.6.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/c5bebe1cfa.js" crossorigin="anonymous"></script>
 </html>
